2021/linux/kubernetes-2/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    name: test-pod
spec:
  containers:
  - name: test-pod
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
      - name:  test-vol
        mountPath:  /mnt
  volumes:
    - name: test-vol
      persistentVolumeClaim:
        claimName: testpvc
