2021/linux/kubernetes-2/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-local
  labels:
    name: ingress-local
spec:
  rules:
  - host: "vote.ht2021.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote
            port: 
              number: 80
  - host: "result.ht2021.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port: 
              number: 80
